syntax = "proto3";

package course_recommender;

option go_package = "./api";

import "course.proto";

message RecommendRequest{
    int64 student_id = 1;
    repeated int64 interest_tags = 2;
}

message CoursesList {
    repeated Course course = 1;
}

message RecommendResponse {
    map<string, CoursesList> recommendations = 1;
}